@@ -1,3 +1,5 @@
+	- Replaced CS/Serbia and Montenegro with RS/Serbia, removed ZR/Zaire, added ME/Montenegro
+	- Added AX/Aland Islands, GG/Guernsey, IM/Isle of Man, JE/Jersey (ISO-3166-1 changes)
 	- Added support for GEOIP_INDEX_CACHE (Frank Mather)
 	- close filehandle after data is read into memory for MemoryCache mode
 	- Added BenchmarkGeoIP.java (Frank Mather)
